--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,1 +1,10 @@
-new.erb
+<div class="new-user-form">
+  <h3>Create an account</h3>
+
+  <form action="/users" method="post">
+    <input type="text" name="user[username]" placeholder="username">
+    <input type="text" name="user[email]" placeholder="email">
+    <input type="password" name="user[password]" placeholder="password">
+    <input type="submit" name="Register">
+  </form>
+</div>
