add styling and user registration

--- a/app/views/solutions/index.erb
+++ b/app/views/solutions/index.erb
@@ -1,10 +1,19 @@
 <div id="bike-pic">
-  <img src="../images/bicycle-traffic-sign.gif">
-  <div id="hs-front-brake" class="hotspot"></div>
-  <div id="hs-front-tire" class="hotspot"></div>
-  <div id="hs-cranks" class="hotspot"></div>
-  <div id="hs-handlebars" class="hotspot"></div>
-  <div id="hs-saddle" class="hotspot"></div>
-  <div id="hs-rear-brake" class="hotspot"></div>
-  <div id="hs-rear-deraileur" class="hotspot"></div>
+  <img src="../images/bicycle-traffic-sign-no-frame.png">
+  <a href="/symptoms"><div id="hs-front-brake" class="hotspot"></div></a>
+  <a href="/symptoms"><div id="hs-front-tire" class="hotspot"></div></a>
+  <a href="/symptoms"><div id="hs-cranks" class="hotspot"></div></a>
+  <a href="/symptoms"><div id="hs-handlebars" class="hotspot"></div></a>
+  <a href="/symptoms"><div id="hs-saddle" class="hotspot"></div></a>
+  <a href="/symptoms"><div id="hs-rear-brake" class="hotspot"></div></a>
+  <a href="/symptoms"><div id="hs-rear-deraileur" class="hotspot"></div></a>
+  <div class="hotspot-instructions">
+    <h3>Tap on the problem area<br>to select an issue</h3>
+</div>
+</div>
+<div class="search-bar">
+  <form action="/solutions" method="get"> 
+  <input type="submit" value="Search">
+  <input type="text" name="search">
+  </form>
 </div>
