--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,13 @@
-<div class="new-user-form">
+<div class="user-form">
+  <h3>Log in</h3>
+  <form action="/sessions" method="post">
+    <input type="text" name="user[email]" placeholder="email">
+    <input type="password" name="user[password]" placeholder="password">
+    <input type="submit" name="Login">
+  </form>  
+</div>
+<br>
+<div class="user-form">
   <h3>Create an account</h3>
 
   <form action="/users" method="post">
