--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 1%;
+  background-color: #B0C4FF;
   /*min-height: 667px;*/
 }
 
@@ -12,7 +13,7 @@ body {
   text-align: center;
   font-size: 2em;
   /*max-width: 100%*/
-  background-color: #404040;
+  background-color: #962626;
   padding: 1%;
   margin-bottom: 1%;
   position: relative;
@@ -40,11 +41,23 @@ body {
   max-height: 50px;
 }
 
+.category a {
+  /*text-decoration: none;*/
+  color: black;
+  font-weight: bold;
+}
+
 .category {
   text-align: center;
   font-weight: bold;
-  background-color: #D9D9D9;
+  color: white;
+  background-color: #C46A6A;
   padding: 1%;
+}
+
+.symptom a {
+  color: black;
+  text-decoration: none;
 }
 
 .solution-details {
@@ -57,9 +70,15 @@ body {
 
 .solution-overview {
   text-align: center;
-  background-color: #A8A8A8;
+  background-color: #C46A6A;
   padding: 3%;
 } 
+
+.hotspot-instructions {
+  text-align: center;
+  color: white;
+  font-size: 3em;
+}
 
 .hotspot {
   display: inline-block;
@@ -73,38 +92,10 @@ body {
 
 .search-bar {
   display: block;
-  background-color: #A8A8A8;
+  background-color: #C46A6A;
   padding: 3%;
   position: relative;
   bottom: 0%;
-}
-
-.new-user-form {
-  display: block;
-  background-color: #A8A8A8;
-  padding: 3%;
-  position: relative;
-  bottom: 0%;
-}
-
-.new-user-form h3 {
-  margin: 0;
-  text-align: center;
-  font-size: 3em;
-}
-
-.new-user-form form input {
-  font-size: 2em;
-  padding: 2%;
-  margin: 2%;
-  min-width: 90%;
-}
-
-.new-user-form form input[type="submit"] {
-  margin-left: 2%;
-  /*border-radius: 20%;*/
-  box-shadow: 5px 5px 5px #888888;
-  min-width: 95%;
 }
 
 .search-bar form input[type="text"] {
@@ -115,50 +106,86 @@ body {
 }
 
 .search-bar form input[type="submit"] {
-  margin-left: 2%;
-  border-radius: 20%;
-  box-shadow: 5px 5px 5px #888888;
+  min-width: 18%;
+  color: grey;
+  background-color: white;
+  border-radius: 10%;
+  padding: 2%;
+  margin-right: 2%;
+  box-shadow: 5px 5px 5px #A36F6F;
 }
 
 .search-bar form input {
   font-size: 2em;
   padding: 2%;
-  min-width: 18%;
 }
 
+.user-form {
+  display: block;
+  background-color: #C46A6A;
+  padding: 3%;
+  position: relative;
+  bottom: 0%;
+}
+
+.user-form h3 {
+  margin: 0;
+  color: white;
+  text-align: center;
+  font-size: 3em;
+}
+
+.user-form input {
+  font-size: 2em;
+  padding: 2%;
+  margin: 2%;
+  min-width: 90%;
+}
+
+.user-form form input[type="submit"] {
+  min-width: 95%;
+  padding: 2%;
+  background-color: white;
+  box-shadow: 5px 5px 5px #A36F6F;
+}
+
+/*.new-user-form form input[type="submit"] {
+  margin-left: 2%;
+}*/
+
 #hs-front-brake {
-  bottom: 54%;
-  left: 32%;
+  bottom: 64%;
+  left: 22%;
 }
 
 #hs-rear-brake {
-  bottom: 54%;
-  left: 61%;
+  bottom: 64%;
+  left: 69%;
 }
 
 #hs-rear-deraileur {
-  bottom: 44%;
-  left: 67%;
+  bottom: 42%;
+  left: 76%;
 }
 
 #hs-front-tire {
-  bottom: 33%;
-  left: 21%;
+  bottom: 24%;
+  left: 15%;
 }
 
 #hs-cranks {
   bottom: 42%;
-  left: 48%;
+  left: 50%;
 }
 
 #hs-handlebars {
-  bottom: 65%;
-  left: 36%;
+  bottom: 90%;
+  left: 30%;
 }
 
 #hs-saddle {
-  bottom: 63%;
-  left: 55%;
+  bottom: 88%;
+  left: 63%;
 }
 
 #bike-pic {
@@ -166,8 +193,8 @@ body {
   margin: 0 auto;
   width: 100%;
   min-height: 100%;
-  margin-top: 20%;
-  margin-bottom: 25%
+  margin-top: 40%;
+  margin-bottom: 27%
 }
 #bike-pic img {
   margin: 0 auto;
