--- a/app/views/solutions/show.erb
+++ b/app/views/solutions/show.erb
@@ -1,4 +1,4 @@
-<div class="category">
+<div class="solution-category category">
   <h1>
     <a href='/symptoms'><%= "#{ @category.name }" %></a> > 
     <%= "#{ @symptom.description }" %>
