--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,17 +2,25 @@
   /*border: 1px solid red;*/
 }
 
+html {
+  height: 100%;
+  margin: 0%;
+}
+
 body {
-  margin: 1%;
-  background-color: #B0C4FF;
-  /*min-height: 667px;*/
+  background-color: #BAD9F5;
+  /*padding-top: 50%;*/
+  /*padding-bottom: 50%;*/
+  /*width: 100vh;*/
+  height: 100vh;
+  /*height: 100%;*/
 }
 
 
 .header {
   text-align: center;
   font-size: 2em;
-  /*max-width: 100%*/
+  width: 100%;
   background-color: #962626;
   padding: 1%;
   margin-bottom: 1%;
@@ -60,8 +68,14 @@ body {
   text-decoration: none;
 }
 
+.solution-category {
+  color: #525252;
+  background-color: white;
+}
+
 .solution-details {
   text-align: center;
+  background-color: white;
   border: 1px solid grey;
   border-radius: 3%;
   padding: 3%;
@@ -74,27 +88,12 @@ body {
   padding: 3%;
 } 
 
-.hotspot-instructions {
-  text-align: center;
-  color: white;
-  font-size: 3em;
-}
-
-.hotspot {
-  display: inline-block;
-  opacity: 0.5;
-  position: absolute;
-  padding: 3.5%;
-  border: 1px solid blue;
-  border-radius: 50%;
-  background-color: #FF0000
-}
-
 .search-bar {
   display: block;
   background-color: #C46A6A;
   padding: 3%;
-  position: relative;
+  position: absolute;
+  width: 96%;
   bottom: 0%;
 }
 
@@ -153,50 +152,83 @@ body {
   margin-left: 2%;
 }*/
 
+#solutions-menu {
+  position: relative;
+  padding-top: 50%;
+  padding-bottom: 50%;
+  width: 100%;
+  height: 100%
+}
+
+.hotspot {
+  /*display: inline-block;*/
+  opacity: 0.5;
+  position: absolute;
+  height: 3.5%;
+  width: 1%;
+  padding: 3.5%;
+  border: 1px solid blue;
+  border-radius: 50%;
+  background-color: #FF0000
+}
+
 #hs-front-brake {
-  bottom: 64%;
-  left: 22%;
+  bottom: 50%;
+  left: 20%;
 }
 
 #hs-rear-brake {
-  bottom: 64%;
+  bottom: 50%;
   left: 69%;
 }
 
 #hs-rear-deraileur {
-  bottom: 42%;
+  bottom: 23%;
   left: 76%;
 }
 
 #hs-front-tire {
-  bottom: 24%;
+  bottom: 0%;
   left: 15%;
 }
 
 #hs-cranks {
-  bottom: 42%;
+  bottom: 22%;
   left: 50%;
 }
 
 #hs-handlebars {
-  bottom: 90%;
+  bottom: 85%;
   left: 30%;
 }
 
 #hs-saddle {
-  bottom: 88%;
+  bottom: 82%;
   left: 63%;
 }
 
-#bike-pic {
-  position: relative;
-  margin: 0 auto;
+.hotspot-instructions {
+  text-align: center;
+  color: white;
+  font-size: 3em;
+  position: absolute;
+  bottom: 0%;
+  left: 15%;
+}
+
+.hotspot-menu {
+  position: absolute;
+  font-size: 3em;
   width: 100%;
-  min-height: 100%;
-  margin-top: 40%;
-  margin-bottom: 27%
+  top: 80%;
+}
+
+#bike-pic {
+  width: 100%;
+  position: absolute;
+  margin: 0 auto;
+  bottom: 30%;
 }
 #bike-pic img {
-  margin: 0 auto;
   width: 100%;
 }
