--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,18 +2,9 @@
   /*border: 1px solid red;*/
 }
 
-html {
-  height: 100%;
-  margin: 0%;
-}
 
 body {
   background-color: #BAD9F5;
-  /*padding-top: 50%;*/
-  /*padding-bottom: 50%;*/
-  /*width: 100vh;*/
-  height: 100vh;
-  /*height: 100%;*/
 }
 
 
@@ -22,9 +13,8 @@ body {
   font-size: 2em;
   width: 100%;
   background-color: #962626;
-  padding: 1%;
-  margin-bottom: 1%;
   position: relative;
+  top: 0%;
 }
 
 .header a {
@@ -91,25 +81,25 @@ body {
 .search-bar {
   display: block;
   background-color: #C46A6A;
-  padding: 3%;
+  padding: 2%;
   position: absolute;
-  width: 96%;
-  bottom: 0%;
+  width: 98%;
+  top: 150px;
 }
 
 .search-bar form input[type="text"] {
   /*border-radius: 10%;*/
-  font-size: 2em;
+  font-size: 1em;
   padding: 2%;
-  min-width: 75%;
+  min-width: 70%;
 }
 
 .search-bar form input[type="submit"] {
-  min-width: 18%;
+  /*min-width: 18%;*/
   color: grey;
   background-color: white;
   border-radius: 10%;
-  padding: 2%;
+  /*padding: 1%;*/
   margin-right: 2%;
   box-shadow: 5px 5px 5px #A36F6F;
 }
@@ -153,11 +143,11 @@ body {
 }*/
 
 #solutions-menu {
-  position: relative;
-  padding-top: 50%;
+  /*position: absolute;*/
+  /*padding-top: 50%;*/
   padding-bottom: 50%;
   width: 100%;
-  height: 100%
+  height: 100%;
 }
 
 .hotspot {
@@ -212,7 +202,7 @@ body {
   color: white;
   font-size: 3em;
   position: absolute;
-  bottom: 0%;
+  top: 70%;
   left: 15%;
 }
 
@@ -220,14 +210,15 @@ body {
   position: absolute;
   font-size: 3em;
   width: 100%;
-  top: 80%;
+  top: 60%;
 }
 
 #bike-pic {
   width: 100%;
   position: absolute;
   margin: 0 auto;
-  bottom: 30%;
+  top: 20%;
+  /*bottom: 40%;*/
 }
 #bike-pic img {
   width: 100%;
