--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -1,5 +1,5 @@
 <div class="header">
   <a id="user-menu" href="/users/new"><img src="../images/user.svg"></a>
   <h1 id="logo"><a href='/'>BikeMD</a></h1>
-  <a id="hamburger-menu" href="/symptoms"><img src="../images/hamburger-menu.png"></a>
+  <a id="hamburger-menu-icon" href="/symptoms"><img src="../images/hamburger-menu.png"></a>
 <div>
