--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,7 +2,6 @@
   /*border: 1px solid red;*/
 }
 
-
 body {
   background-color: #BAD9F5;
 }
@@ -10,7 +9,7 @@ body {
 
 .header {
   text-align: center;
-  font-size: 2em;
+  font-size: 1.25em;
   width: 100%;
   background-color: #962626;
   position: relative;
@@ -25,17 +24,17 @@ body {
   display: inline-block;
 }
 #user-menu {
-  padding: 2%;
+  padding: 1%;
   float: left;
   /*max-height: 5px;*/
 }
 
-#hamburger-menu {
-  padding: 5%;
+#hamburger-menu-icon {
+  padding: 2%;
   float: right;
 }
 
-#hamburger-menu img {
+#hamburger-menu-icon img {
   max-height: 50px;
 }
 
@@ -76,7 +75,7 @@ body {
   text-align: center;
   background-color: #C46A6A;
   padding: 3%;
-} 
+}
 
 .search-bar {
   display: block;
@@ -84,18 +83,15 @@ body {
   padding: 2%;
   position: absolute;
   width: 98%;
-  top: 150px;
+  top: 100px;
 }
 
 .search-bar form input[type="text"] {
-  /*border-radius: 10%;*/
-  font-size: 1em;
-  padding: 2%;
-  min-width: 70%;
+  min-width: 80%;
 }
 
 .search-bar form input[type="submit"] {
-  /*min-width: 18%;*/
+  min-width: 10%;
   color: grey;
   background-color: white;
   border-radius: 10%;
@@ -106,7 +102,7 @@ body {
 
 .search-bar form input {
   font-size: 2em;
-  padding: 2%;
+  padding: 1%;
 }
 
 .user-form {
@@ -126,14 +122,14 @@ body {
 
 .user-form input {
   font-size: 2em;
-  padding: 2%;
-  margin: 2%;
-  min-width: 90%;
+  padding: 1%;
+  margin: 1%;
+  min-width: 93%;
 }
 
 .user-form form input[type="submit"] {
   min-width: 95%;
-  padding: 2%;
+  padding: 1%;
   background-color: white;
   box-shadow: 5px 5px 5px #A36F6F;
 }
@@ -202,7 +198,7 @@ body {
   color: white;
   font-size: 3em;
   position: absolute;
-  top: 70%;
+  top: 1000px;
   left: 15%;
 }
 
@@ -214,6 +210,7 @@ body {
 }
 
 #bike-pic {
+  /*max-width: 500px;*/
   width: 100%;
   position: absolute;
   margin: 0 auto;
@@ -222,4 +219,13 @@ body {
 }
 #bike-pic img {
   width: 100%;
+}
+
+#map {
+  position: relative;
+  margin: 0 auto;
+  top: 30px;
+  width: 900px;
+  height: 900px;
+  background-color: #C46A6A;
 }
