--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -1,5 +1,11 @@
 <div class="header">
-  <a id="user-menu" href="/users/new"><img src="../images/user.svg"></a>
+  <a id="user-menu-icon" href="/solutions?menu=_users_menu"><img src="../images/user.svg"></a>
   <h1 id="logo"><a href='/'>BikeMD</a></h1>
-  <a id="hamburger-menu-icon" href="/symptoms"><img src="../images/hamburger-menu.png"></a>
-<div>
+  <a id="hamburger-menu-icon" href="/solutions?menu=_hamburger_menu"><img src="../images/hamburger-menu.png"></a>
+</div>
+<% if @menu %>
+  <div class="drop-down-menu">
+  <p id="close-menu"><a href="/solutions">X</p>
+    <%= erb :"partials/#{@menu}" %>
+  </div>
+<% end %>
